; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/intel/skylake/extr_skl-sst-ipc.c_skl_ipc_init.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/intel/skylake/extr_skl-sst-ipc.c_skl_ipc_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.skl_dev = type { i32, %struct.sst_generic_ipc }
%struct.sst_generic_ipc = type { %struct.TYPE_2__, i32, i32, %struct.device*, i32 }
%struct.TYPE_2__ = type { i32, i32, i32 }

@SKL_ADSP_W1_SZ = common dso_local global i32 0, align 4
@SKL_ADSP_W0_UP_SZ = common dso_local global i32 0, align 4
@skl_ipc_tx_msg = common dso_local global i32 0, align 4
@skl_ipc_tx_data_copy = common dso_local global i32 0, align 4
@skl_ipc_is_dsp_busy = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @skl_ipc_init(%struct.device* %0, %struct.skl_dev* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.skl_dev*, align 8
  %6 = alloca %struct.sst_generic_ipc*, align 8
  %7 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.skl_dev* %1, %struct.skl_dev** %5, align 8
  %8 = load %struct.skl_dev*, %struct.skl_dev** %5, align 8
  %9 = getelementptr inbounds %struct.skl_dev, %struct.skl_dev* %8, i32 0, i32 1
  store %struct.sst_generic_ipc* %9, %struct.sst_generic_ipc** %6, align 8
  %10 = load %struct.skl_dev*, %struct.skl_dev** %5, align 8
  %11 = getelementptr inbounds %struct.skl_dev, %struct.skl_dev* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = load %struct.sst_generic_ipc*, %struct.sst_generic_ipc** %6, align 8
  %14 = getelementptr inbounds %struct.sst_generic_ipc, %struct.sst_generic_ipc* %13, i32 0, i32 4
  store i32 %12, i32* %14, align 8
  %15 = load %struct.device*, %struct.device** %4, align 8
  %16 = load %struct.sst_generic_ipc*, %struct.sst_generic_ipc** %6, align 8
  %17 = getelementptr inbounds %struct.sst_generic_ipc, %struct.sst_generic_ipc* %16, i32 0, i32 3
  store %struct.device* %15, %struct.device** %17, align 8
  %18 = load i32, i32* @SKL_ADSP_W1_SZ, align 4
  %19 = load %struct.sst_generic_ipc*, %struct.sst_generic_ipc** %6, align 8
  %20 = getelementptr inbounds %struct.sst_generic_ipc, %struct.sst_generic_ipc* %19, i32 0, i32 2
  store i32 %18, i32* %20, align 8
  %21 = load i32, i32* @SKL_ADSP_W0_UP_SZ, align 4
  %22 = load %struct.sst_generic_ipc*, %struct.sst_generic_ipc** %6, align 8
  %23 = getelementptr inbounds %struct.sst_generic_ipc, %struct.sst_generic_ipc* %22, i32 0, i32 1
  store i32 %21, i32* %23, align 4
  %24 = load %struct.sst_generic_ipc*, %struct.sst_generic_ipc** %6, align 8
  %25 = call i32 @sst_ipc_init(%struct.sst_generic_ipc* %24)
  store i32 %25, i32* %7, align 4
  %26 = load i32, i32* %7, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %2
  %29 = load i32, i32* %7, align 4
  store i32 %29, i32* %3, align 4
  br label %43

30:                                               ; preds = %2
  %31 = load i32, i32* @skl_ipc_tx_msg, align 4
  %32 = load %struct.sst_generic_ipc*, %struct.sst_generic_ipc** %6, align 8
  %33 = getelementptr inbounds %struct.sst_generic_ipc, %struct.sst_generic_ipc* %32, i32 0, i32 0
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 2
  store i32 %31, i32* %34, align 8
  %35 = load i32, i32* @skl_ipc_tx_data_copy, align 4
  %36 = load %struct.sst_generic_ipc*, %struct.sst_generic_ipc** %6, align 8
  %37 = getelementptr inbounds %struct.sst_generic_ipc, %struct.sst_generic_ipc* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i32 0, i32 1
  store i32 %35, i32* %38, align 4
  %39 = load i32, i32* @skl_ipc_is_dsp_busy, align 4
  %40 = load %struct.sst_generic_ipc*, %struct.sst_generic_ipc** %6, align 8
  %41 = getelementptr inbounds %struct.sst_generic_ipc, %struct.sst_generic_ipc* %40, i32 0, i32 0
  %42 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %41, i32 0, i32 0
  store i32 %39, i32* %42, align 8
  store i32 0, i32* %3, align 4
  br label %43

43:                                               ; preds = %30, %28
  %44 = load i32, i32* %3, align 4
  ret i32 %44
}

declare dso_local i32 @sst_ipc_init(%struct.sst_generic_ipc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
